--- a/app/project.properties
+++ b/app/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-21
+android.library.reference.1=../../android-sdks/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=../../AvatarGenerator
