--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAE8luQYylT1zZaVTsuEdHWCefVlgyf7Jk" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
 
         <activity android:name=".SplashscreenActivity" >
             <intent-filter>
@@ -33,6 +36,14 @@
         <activity
             android:name=".PublicChatActivity"
             android:label="@string/title_activity_public_chat" >
+        </activity>
+        <activity
+            android:name=".ConnectFacebookActivity"
+            android:label="@string/title_activity_connect_facebook" >
+        </activity>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/title_activity_connect_facebook" >  
         </activity>
     </application>
 
