--- a/app/project.properties
+++ b/app/project.properties
@@ -12,5 +12,6 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=../../android-sdks/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.2=../../AvatarGenerator
+android.library.reference.1=../../AvatarGenerator
+android.library.reference.2=../../../../android-sdk-linux/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.3=../../../../facebook-android-sdk-3.23.0/facebook
