--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -35,6 +35,7 @@
         </activity>
         <activity
             android:name=".PublicChatActivity"
+            android:configChanges="orientation|keyboard|screenSize"
             android:label="@string/title_activity_public_chat" >
         </activity>
         <activity
