--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -45,7 +45,11 @@
         </activity>
         <activity
             android:name="com.facebook.LoginActivity"
-            android:label="@string/title_activity_connect_facebook" >  
+            android:label="@string/title_activity_connect_facebook" >
+        </activity>
+        <activity
+            android:name=".PrivateChatActivity"
+            android:label="@string/title_activity_private_chat" >
         </activity>
     </application>
 
