Fixed picture size on mobile and github link.

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ social:
   - title: bitbucket
     url: 
   - title: github
-    url: https://github.com/dciets/
+    url: https://github.com/ldionmarcil/blindr
 
 # Postal address (add as many lines as necessary)
 address:
