--- a/app/project.properties
+++ b/app/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=../../AvatarGenerator
-android.library.reference.2=../../facebook
-android.library.reference.3=../../android-sdks/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.1=..\\..\\AvatarGenerator
+android.library.reference.2=..\\..\\facebook
+android.library.reference.3=../../Eclipse/sdk/extras/google/google_play_services/libproject/google-play-services_lib
