--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@ email: your-email@domain.com
 url: https://example.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 favIconPath: "img/favicon.png"
-logoPath: "img/favicon.png"
-previewPath: "img/favicon.png"
+previewPath: "img/nexus.png"
 
 # Contact form: comment the line below if you want to stick with the default PHP contact form
 contact: static
