--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -40,11 +40,8 @@
             android:label="@string/title_activity_public_chat" >
         </activity>
         <activity
-            android:name=".ConnectFacebookActivity"
-            android:label="@string/title_activity_connect_facebook" >
-        </activity>
-        <activity
             android:name="com.facebook.LoginActivity"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
             android:label="@string/title_activity_connect_facebook" >
         </activity>
         <activity
