--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -41,8 +41,8 @@
         </activity>
         <activity
             android:name="com.facebook.LoginActivity"
-            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
-            android:label="@string/title_activity_connect_facebook" >
+            android:label="@string/title_activity_connect_facebook"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
         </activity>
         <activity
             android:name=".PrivateChatActivity"
