--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -46,7 +48,12 @@
         </activity>
         <activity
             android:name=".PrivateChatActivity"
+            android:configChanges="orientation|keyboard|screenSize"
             android:label="@string/title_activity_private_chat" >
+        </activity>
+        <activity
+            android:name=".ImageViewerActivity"
+            android:label="@string/title_activity_image_viewer" >
         </activity>
     </application>
 
