--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -50,6 +51,12 @@
             android:name=".PrivateChatActivity"
             android:configChanges="orientation|keyboard|screenSize"
             android:label="@string/title_activity_private_chat" >
+        </activity>
+        <activity
+            android:name=".ChooseRoomActivity"
+            android:configChanges="orientation|keyboard|screenSize"
+            android:label="@string/title_activity_private_chat"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ImageViewerActivity"
