--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/blindr_logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -30,7 +30,10 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
 
-        <activity android:name=".SplashscreenActivity" >
+        <activity
+            android:name=".SplashscreenActivity"
+            android:configChanges="orientation|keyboard|screenSize"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -61,6 +64,10 @@
         <activity
             android:name=".ImageViewerActivity"
             android:label="@string/title_activity_image_viewer" >
+        </activity>
+        <activity
+            android:name="com.grio.fbphotopicker.FBPhotoPickerActivity"
+            android:label="@string/activity_title" >
         </activity>
     </application>
 
