--- a/app/.classpath
+++ b/app/.classpath
@@ -5,5 +5,11 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/AndroidSwipeLayout-v1.1.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/UrlImageViewHelper.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/AvatarGenerator"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/FacebookSDK"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/google-play-services_lib"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
